--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "buildCommand": "cd kaspa-chess-web && npm run build",
   "outputDirectory": "kaspa-chess-web/dist",
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
