--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "buildCommand": "cd kaspa-chess-web && npm run build",
   "outputDirectory": "kaspa-chess-web/dist",
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" },
-    { "source": "/(.*)", "destination": "/index.html" }
+  "routes": [
+    { "src": "^/api/(.*)", "dest": "/api/$1" },
+    { "src": "^/(?!api).*$", "dest": "/index.html" }
   ]
 }
