--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@kaspa/core-lib": "^1.6.5",
+    "@noble/curves": "^1.2.0",
     "@noble/hashes": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@scure/bip32": "^2.0.1",
