--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "scripts": {
     "dev": "npm run dev --workspace=apps/web",
     "build": "npm run build --workspace=apps/web"
+  },
+  "dependencies": {
+    "@upstash/redis": "^1.36.1",
+    "@vercel/kv": "^3.0.0"
   }
 }
