--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   ],
   "scripts": {
     "dev": "npm run dev --workspace=apps/web",
-    "build": "npm run build --workspace=apps/web"
+    "build": "npm run build --workspace=apps/web",
+    "api": "tsx api/server.ts",
+    "api:dev": "tsx watch api/server.ts"
   },
   "dependencies": {
     "@upstash/redis": "^1.36.1",
-    "@vercel/kv": "^3.0.0"
+    "@vercel/kv": "^3.0.0",
+    "cors": "^2.8.6",
+    "express": "^5.2.1",
+    "tsx": "^4.21.0"
   }
 }
